# minecraft-rust

./: Cargo.toml  README.md
src/: blocks.rs  camera.rs  chunk.rs  collision.rs  lib.rs  main.rs  packet.rs  shapes.rs  teapot.rs
src/client/: camera.rs  chunk.rs  light.rs  mod.rs  player.rs  rendering.rs
src/client/shaders/: chunks-vertex.glsl  entity-fragment.glsl  fragment.glsl  vertex.glsl
src/client/shapes/: frustum.rs  mod.rs
src/server/: chunk.rs  mod.rs  player.rs
src/shaders/: vertex.glsl
src/shapes/: cube.rs
