[package]
name = "minecraft-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
default = ["client", "server"]
#client = ["glium", "image", "tobj", "nalgebra"]
client = ["glium"]
server = ["ctrlc", "noise"]

[[bin]]
name = "client"
path = "src/client/bin/main.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/server/bin/main.rs"
required-features = ["server"]

[dependencies]
ctrlc = { version = "*", optional = true }
glium = { version = "*", optional = true }
#nalgebra = { version = "*", optional = true }
#image = { version = "*", optional = true }
noise = { version = "*", optional = true }
serde = { version = "*", features = ["derive"] }
bincode = "*"
#lazy_static = "*"
#tobj = { version = "*", optional = true }
#toml = "*"
#rand = "*"
